<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1pt"
        android:layout_weight="1"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="right|center"
        android:inputType="textPersonName"
        android:text="0"
        android:textSize="40pt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/buAC"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="acEvent"
                android:text="AC"


                ></Button>

            <Button
                android:id="@+id/buPlusMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="+/-"


                ></Button>

            <Button
                android:id="@+id/buDivide"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="operatorEvent"
                android:text="÷"


                ></Button>

            <Button
                android:id="@+id/buMultiply"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:onClick="operatorEvent"
                android:text="*"
                android:textColor="#FFF"


                ></Button>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt"
            android:orientation="vertical">

            <Button
                android:id="@+id/bu7"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="7"


                ></Button>

            <Button
                android:id="@+id/bu8"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="8"


                ></Button>

            <Button
                android:id="@+id/bu9"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="9"


                ></Button>

            <Button
                android:id="@+id/buPercent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:onClick="percentEvent"
                android:text="%"
                android:textColor="#FFF"


                ></Button>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu4"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="4"


                ></Button>

            <Button
                android:id="@+id/bu5"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="5"


                ></Button>

            <Button
                android:id="@+id/bu6"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="6"


                ></Button>

            <Button
                android:id="@+id/buPlus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:onClick="operatorEvent"
                android:text="+"
                android:textColor="#FFF"


                ></Button>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu1"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="1"


                ></Button>

            <Button
                android:id="@+id/bu2"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="2"


                ></Button>

            <Button
                android:id="@+id/bu3"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="numberEvent"
                android:text="3"


                ></Button>

            <Button
                android:id="@+id/buMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:onClick="operatorEvent"
                android:text="-"
                android:textColor="#FFF"


                ></Button>


        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu0"
            android:layout_width="3dp"
            android:layout_height="30pt"
            android:layout_marginRight="1pt"
            android:layout_weight="2"
            android:background="@color/orange"
            android:onClick="numberEvent"
            android:text="0"


            ></Button>

        <Button
            android:id="@+id/buDot"
            android:layout_width="3dp"
            android:layout_height="30pt"
            android:layout_marginRight="1pt"
            android:layout_weight="2"
            android:background="@color/orange"
            android:onClick="numberEvent"
            android:text="."


            ></Button>

        <Button
            android:id="@+id/buEqual"
            android:layout_width="105dp"
            android:layout_height="30pt"
            android:layout_marginRight="1pt"
            android:layout_weight="2"
            android:backgroundTint="@color/orange"
            android:onClick="equalEvent"
            android:text="="
            android:textColor="#FFF"


            ></Button>


    </LinearLayout>

</LinearLayout>